[workspace]

members = [
    "pbt-gen",
    "proto",
    "tendermint",
    "tools/proto-compiler",
]

exclude = [
    "abci",
    "config",
    "light-client",
    "light-client-cli",
    "light-client-detector",
    "light-client-js",
    "light-client-verifier",
    "p2p",
    "rpc",
    "std-ext",
    "test",
    "testgen",
    "tools/no-std-check",
]

#[profile.release.package.tendermint-light-client-js]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
