[workspace]
resolver = "2"

members = [
    "proto",
    "tendermint",
]

exclude = [
    "abci",
    "config",
    "light-client",
    "light-client-verifier",
    "light-client-detector",
    "light-client-cli",
    "light-client-js",
    "p2p",
    "pbt-gen",
    "rpc",
    "std-ext",
    "test",
    "testgen",
    "proto-compiler",
    "tools/no-std-check"
]

[profile.release.package.tendermint-light-client-js]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
