[workspace]
resolver = "2"

members = [
    "proto",
    "tendermint",
]

exclude = [
    "abci",
    "config",
    "light-client",
    "light-client-verifier",
    "light-client-detector",
    "light-client-cli",
    "light-client-js",
    "p2p",
    "pbt-gen",
    "rpc",
    "std-ext",
    "test",
    "testgen",
    "proto-compiler",
    "tools/no-std-check"
]

[workspace.dependencies]
prost = { version = "0.13.3", default-features = false }
prost-types = { version = "0.13.3", default-features = false }

[profile.release.package.tendermint-light-client-js]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
