[package]
name = "tendermint-proto-compiler"
version = "0.3.0"
authors = ["Informal Systems <hello@informal.systems>"]
edition = "2021"
publish = false

[dependencies]
git2            = { version = "0.16" }
prost-build     = { version = "0.13.3" }
serde           = { version = "1.0", features = ["derive"] }
serde_yaml      = { version = "0.9" }
subtle-encoding = { version = "0.5" }
tempfile        = { version = "3.5.0" }
thiserror       = { version = "1.0" }
walkdir         = { version = "2.3" }
